@@ -88,13 +88,15 @@ EOT
     json = generate({1=>2}, nil)
     assert_equal('{"1":2}', json)
     s = JSON.state.new(:check_circular => true)
-    #assert s.check_circular
+    assert s.check_circular?
+    assert s[:check_circular?]
     h = { 1=>2 }
     h[3] = h
     assert_raises(JSON::CircularDatastructure) {  generate(h) }
     assert_raises(JSON::CircularDatastructure) {  generate(h, s) }
     s = JSON.state.new(:check_circular => true)
-    #assert s.check_circular
+    assert s.check_circular?
+    assert s[:check_circular?]
     a = [ 1, 2 ]
     a << a
     assert_raises(JSON::CircularDatastructure) {  generate(a, s) }
